removed geode bin install dependency