@@ -3,17 +3,44 @@
 PRG="$0"
 PRGDIR=`dirname "$PRG"`
 APP_HOME=`cd "$PRGDIR/.." >/dev/null; pwd`
-#$JAVA_OPTS=
-CLASS_PATH="$APP_HOME/benchmark.geode-1.0-SNAPSHOT.jar:$APP_HOME/conf:$APP_HOME/lib/*:$GEMFIRE_HOME/lib/*:"
 
-gfsh start server \
-    --dir=$APP_HOME/server2 --locators=localhost[10680] \
-    --classpath=$CLASS_PATH \
-    --properties-file=$APP_HOME/conf/geode-server.properties \
-    --cache-xml-file=$APP_HOME/conf/geode-server.xml \
-    --server-port=40406 \
-    --name=server2 \
-    --initial-heap=512M \
-    --max-heap=512M \
-    --off-heap-memory-size=512M \
-    --critical-off-heap-percentage=90 --eviction-off-heap-percentage=80
+SERVER_HOME=$APP_HOME/server2
+if [ ! -d "$SERVER_HOME" ]; then
+  mkdir -p "$SERVER_HOME"
+fi
+
+cd $SERVER_HOME
+
+MEMBER_NAME=server2
+WORK_DIRECTORY="$SERVER_HOME/logs"
+
+APP_PID=$RANDOM
+TODAY=`date +%Y-%m-%d.%H-%M-%S`
+
+if [ ! -d "$WORK_DIRECTORY" ]; then
+  mkdir -p "$WORK_DIRECTORY"
+fi
+
+CLASS_PATH="$APP_HOME/benchmark.geode-1.0-SNAPSHOT.jar:$APP_HOME/conf:$APP_HOME/lib/*"
+
+APP_PID=$RANDOM
+TODAY=`date +%Y-%m-%d.%H-%M-%S`
+
+MEM_OPTS="-Xms512m -Xmx512m -XX:+HeapDumpOnOutOfMemoryError"
+GC_OPTS="-XX:+UseG1GC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -Xloggc:$WORK_DIRECTORY/geode-gc.$TODAY.$APP_PID.log"
+JAVA_OPTS="-server -showversion \
+-Dgemfire.log-file=$WORK_DIRECTORY/geode.$TODAY.$APP_PID.log \
+-Dgemfire.locators=localhost[10680] \
+-Dgemfire.cache-xml-file=$APP_HOME/conf/geode-server.xml \
+-Dgemfire.server-port=40406
+ -Dgemfire.jmx-manager-port=2098 \
+-Dgemfire.bind-address=localhost \
+-Dgemfire.name=$MEMBER_NAME \
+-Dgemfire.off-heap-memory-size=512M \
+-Dgemfire.critical-off-heap-percentage=90 \
+-Dgemfire.eviction-off-heap-percentage=80 \
+$MEM_OPTS $GC_OPTS"
+
+COMMAND_LINE="java $JAVA_OPTS -cp $CLASS_PATH  com.geode.poc.GeodeMember"
+echo $COMMAND_LINE
+$COMMAND_LINE
